--- a/LandingPage.html
+++ b/LandingPage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+CTYPE html>
 <html>
 <head>
     <title>RegisterPage</title>
@@ -23,31 +23,6 @@
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-<<<<<<< HEAD
-<div class="row">
-            <nav class="navbar navbar-default navbar-fixed-top">
-                <div class="container-fluid">
-                <ul class="nav navbar-nav navbar-left">
-                    <li>
-                        <span class="glyphicon glyphicon-th-list nav-icon"></span>     
-                  </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <span class="glyphicon glyphicon-search nav-icon"></span>
-                    </li>
-                    <li>
-                    <span class="glyphicon glyphicon-user nav-icon"></span>
-                    </li>
-                </ul>
-                </nav>
-                </div>
-        </div>
-<div class="container">
-    <div class="col-md-12 col-sm-12 col-xs-12">
-        
-        <hr width="100%"/>
-=======
 <div class="container column-view">
     <div class="col-md-12 col-sm-12 col-xs-12 offset-down">
         <div class="row search-bar">
@@ -85,7 +60,6 @@
         </div>
 
         </div>
->>>>>>> c909fbee9247a9b3a0059f5d2e8196783eefdc9b
         <div class="row top-buffer">
             <div class="panel panel-default data-container">
                 <div class="panel-body" id="boxes">PACK READY TO BE DELIVERED IN YOUR'S NEIGHBORHOOD</div>
@@ -110,3 +84,4 @@
 </div>
 </body>
 </html>
+
