--- a/CalendarPage.html
+++ b/CalendarPage.html
@@ -50,7 +50,7 @@
                             <li><a href="SendHistoryDetailsPage.html">Your sending history</a></li>
                             <li><a href="GroupsPage.html">Groups</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="HelpPage.html">Log Out</a></li>
+                            <li><a href="HelpPage.html">Help</a></li>
                             <li><a href="AccountSettingsPage.html">Account settings</a></li>
                             <li><a href="LogoutPage.html">Log Out</a></li>
                         </ul>
