--- a/FulfillmentOfTheOrder_SenderPage.html
+++ b/FulfillmentOfTheOrder_SenderPage.html
@@ -50,7 +50,7 @@
                             <li><a href="SendHistoryDetailsPage.html">Your sending history</a></li>
                             <li><a href="GroupsPage.html">Groups</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="HelpPage.html">Log Out</a></li>
+                            <li><a href="HelpPage.html">Help</a></li>
                             <li><a href="AccountSettingsPage.html">Account settings</a></li>
                             <li><a href="LogoutPage.html">Log Out</a></li>
                         </ul>
@@ -196,8 +196,8 @@
                     </div>
                 <div class="form-group">
                     <div class="">
-                        <button type="button" onclick="location.href='SuccesSendingPage.html'"
-                                class="btn btn-primary submit-button">SUBMIT
+                        <button type="button" class="btn btn-primary submit-button" data-toggle="modal" data-target="#myModal"
+                               >SUBMIT
                         </button>
                     </div>
                 </div>
@@ -206,6 +206,29 @@
                         <button type="button" onclick="location.href='SenderPage.html'" class="btn submit-button">
                             CANCEL
                         </button>
+                    </div>
+                </div>
+                <div class="modal fade" id="myModal" role="dialog">
+                    <div class="modal-dialog">
+
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h4 class="modal-title">You successfully send a package!</h4>
+                            </div>
+                            <div class="modal-body">
+                                <p>You can go back to sending</p>
+                                <button type="button" onclick="location.href='DeliverPage.html'"
+                                        class="btn btn-primary submit-button">Continue ordering
+                                </button>
+
+                                <p>or back to main menu</p>
+                                <button type="button" onclick="location.href='LandingPage.html'"
+                                        class="btn btn-primary submit-button">Go to main menu
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </form>
