--- a/LandingPage.html
+++ b/LandingPage.html
@@ -1,4 +1,4 @@
-CTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>RegisterPage</title>
@@ -84,4 +84,3 @@ CTYPE html>
 </div>
 </body>
 </html>
-
