Fixed the Navbar + Updated few pages

--- a/AccountSettingsPage.html
+++ b/AccountSettingsPage.html
@@ -44,11 +44,8 @@
                         <button class="btn btn-default white-background dropdown-toggle" type="button" data-toggle="dropdown">
                             <span class="glyphicon glyphicon-menu-hamburger search search-icon large-icon"></span></button>
                         <ul class="dropdown-menu dropdown-menu-right">
-                            <li><a href="MessagesPage.html">Messages</a></li>
-                            <li><a href="NotificationsPage.html">Notifications</a></li>
                             <li><a href="OrderHistoryDetailsPage.html">Your orders history</a></li>
                             <li><a href="SendHistoryDetailsPage.html">Your sending history</a></li>
-                            <li><a href="GroupsPage.html">Groups</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="HelpPage.html">Help</a></li>
                             <li><a href="AccountSettingsPage.html">Account settings</a></li>
@@ -58,28 +55,9 @@
                 </div>
             </div>
         </div>
-
-        </div>
         <div class="row top-buffer">
-            <div class="panel panel-default data-container">
-                <div class="panel-body" id="boxes">PACK READY TO BE DELIVERED IN YOUR'S NEIGHBORHOOD</div>
-            </div>
-            <div class="panel panel-default data-container">
-                <div class="panel-body" id="boxes">DELIVERERS IN OUR NEAR AREA</div>
-            </div>
-            <form class="form-horizontal">
-                <div class="form-group">
-                    <button id="button" type="button" onclick="location.href='SenderPage.html'"
-                            class="btn btn-primary submit-button">SEND A PACK
-                    </button>
-                </div>
-                <div class="form-group">
-                    <button id="button" type="button" onclick="location.href='DeliverPage.html'"
-                            class="btn btn-primary submit-button">DELIVER A PACK
-                    </button>
-                </div>
-            </form>
-        </div>
+        #ADD SOME FAKE SETTING (LIKE NAME ETC ETC)
+    </div>
     </div>
 </div>
 </body>
