--- a/OrderHistoryDetailsPage.html
+++ b/OrderHistoryDetailsPage.html
@@ -44,11 +44,8 @@
                         <button class="btn btn-default white-background dropdown-toggle" type="button" data-toggle="dropdown">
                             <span class="glyphicon glyphicon-menu-hamburger search search-icon large-icon"></span></button>
                         <ul class="dropdown-menu dropdown-menu-right">
-                            <li><a href="MessagesPage.html">Messages</a></li>
-                            <li><a href="NotificationsPage.html">Notifications</a></li>
                             <li><a href="OrderHistoryDetailsPage.html">Your orders history</a></li>
                             <li><a href="SendHistoryDetailsPage.html">Your sending history</a></li>
-                            <li><a href="GroupsPage.html">Groups</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="HelpPage.html">Help</a></li>
                             <li><a href="AccountSettingsPage.html">Account settings</a></li>
@@ -58,12 +55,18 @@
                 </div>
             </div>
         </div>
-
-        </div>
     <div class="row top-buffer">
-        #here should by order history
+        <h3 class="text-center offset-down"> Your Order History </h3>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package 1</li>
+            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package 2</li>
+            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package 3</li>
+            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package 4</li>
+            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package 5</li>
+        </ul>
     </div>
     </div>
+</div>
 </div>
 </body>
 </html>
