--- a/DeliverPage.html
+++ b/DeliverPage.html
@@ -21,6 +21,11 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
+        <script type="text/javascript">
+$(document).ready(function(){
+    $("#navbar-frame").load("navbar.html");
+});
+    </script>
 </head>
 <body>
 <div class="container">
@@ -44,11 +49,8 @@
                         <button class="btn btn-default white-background dropdown-toggle" type="button" data-toggle="dropdown">
                             <span class="glyphicon glyphicon-menu-hamburger search search-icon large-icon"></span></button>
                         <ul class="dropdown-menu dropdown-menu-right">
-                            <li><a href="MessagesPage.html">Messages</a></li>
-                            <li><a href="NotificationsPage.html">Notifications</a></li>
                             <li><a href="OrderHistoryDetailsPage.html">Your orders history</a></li>
                             <li><a href="SendHistoryDetailsPage.html">Your sending history</a></li>
-                            <li><a href="GroupsPage.html">Groups</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="HelpPage.html">Help</a></li>
                             <li><a href="AccountSettingsPage.html">Account settings</a></li>
@@ -58,8 +60,6 @@
                 </div>
             </div>
         </div>
-
-
         <div class="row top-buffer">
             <form class="form-horizontal">
                 <div class="panel panel-default">
