--- a/HelpPage.html
+++ b/HelpPage.html
@@ -44,11 +44,8 @@
                         <button class="btn btn-default white-background dropdown-toggle" type="button" data-toggle="dropdown">
                             <span class="glyphicon glyphicon-menu-hamburger search search-icon large-icon"></span></button>
                         <ul class="dropdown-menu dropdown-menu-right">
-                            <li><a href="MessagesPage.html">Messages</a></li>
-                            <li><a href="NotificationsPage.html">Notifications</a></li>
                             <li><a href="OrderHistoryDetailsPage.html">Your orders history</a></li>
                             <li><a href="SendHistoryDetailsPage.html">Your sending history</a></li>
-                            <li><a href="GroupsPage.html">Groups</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="HelpPage.html">Help</a></li>
                             <li><a href="AccountSettingsPage.html">Account settings</a></li>
@@ -58,11 +55,14 @@
                 </div>
             </div>
         </div>
-
-        </div>
         <div class="row top-buffer">
-            #here should by pomoc
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus, tortor ut tristique tristique, justo libero congue enim, id aliquet libero libero et mi. Etiam ultrices justo sapien, ac suscipit massa ultrices eget. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed felis quam, luctus at nibh eget, porttitor rutrum lectus. Donec turpis leo, pharetra luctus augue et, pretium lobortis nunc. Curabitur eget urna interdum, volutpat orci blandit, varius velit. Pellentesque finibus molestie ipsum rutrum venenatis. Nunc eget porta urna, vitae consectetur dolor. Aliquam erat volutpat. Sed rutrum sapien sit amet tristique pretium. Vestibulum interdum ex sed dignissim elementum. Duis sollicitudin purus euismod, scelerisque urna ac, dictum felis. Phasellus lacinia pulvinar vestibulum.
+
+Etiam ornare consequat enim nec ornare. Fusce condimentum molestie mattis. Phasellus at tempus magna. Nunc egestas at magna sed luctus. Sed fringilla placerat nisi, sit amet sodales elit ullamcorper id. Nam gravida imperdiet sapien, eu facilisis tellus semper et. Maecenas pellentesque quam diam, nec varius justo pretium vel. Mauris quis pharetra mauris. Praesent tincidunt odio ac bibendum tristique. Donec imperdiet, eros nec porttitor luctus, arcu erat viverra erat, in blandit lectus magna sed erat.
+
+Sed accumsan odio nec turpis posuere, id tincidunt urna tristique. Proin massa eros, scelerisque sed sollicitudin et, lobortis a ante. Sed placerat egestas enim, eget pharetra justo dapibus eget. Integer vulputate tempus elit eu hendrerit. Donec nec vulputate purus, ac lacinia sem. Pellentesque viverra eleifend velit non consequat. Aliquam vitae tortor sit amet risus varius bibendum. Duis non tortor congue ante semper aliquam id id enim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque laoreet iaculis ligula et aliquet. Maecenas dignissim nisi eu erat pulvinar, sed sagittis nunc aliquam. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque commodo, dolor vulputate finibus laoreet, dui justo euismod quam, nec mollis nisi orci sit amet nunc. Aenean condimentum porttitor metus a feugiat. Ut fringilla augue quis est sodales molestie. Etiam non lorem non dolor semper gravida in vitae velit.
         </div>
+    </div>
     </div>
 </div>
 </body>
