--- a/NotificationsPage.html
+++ b/NotificationsPage.html
@@ -44,11 +44,8 @@
                         <button class="btn btn-default white-background dropdown-toggle" type="button" data-toggle="dropdown">
                             <span class="glyphicon glyphicon-menu-hamburger search search-icon large-icon"></span></button>
                         <ul class="dropdown-menu dropdown-menu-right">
-                            <li><a href="MessagesPage.html">Messages</a></li>
-                            <li><a href="NotificationsPage.html">Notifications</a></li>
                             <li><a href="OrderHistoryDetailsPage.html">Your orders history</a></li>
                             <li><a href="SendHistoryDetailsPage.html">Your sending history</a></li>
-                            <li><a href="GroupsPage.html">Groups</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="HelpPage.html">Help</a></li>
                             <li><a href="AccountSettingsPage.html">Account settings</a></li>
@@ -58,11 +55,17 @@
                 </div>
             </div>
         </div>
-
-        </div>
         <div class="row top-buffer">
-            #here should by groupy do ktorych nalezy uzytkownik - np grupa rozworzaca czesci do pralek
+           <h3 class="text-center offset-down"> Your Notifications </h3>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"><span class="glyphicon glyphicon-bell box"></span> Notification 1</li>
+            <li class="list-group-item"><span class="glyphicon glyphicon-bell box"></span> Notification 2</li>
+            <li class="list-group-item"><span class="glyphicon glyphicon-bell box"></span> Notification 3</li>
+            <li class="list-group-item"><span class="glyphicon glyphicon-bell box"></span> Notification 4</li>
+            <li class="list-group-item"><span class="glyphicon glyphicon-bell box"></span> Notification 5</li>
+        </ul>
         </div>
+    </div>
     </div>
 </div>
 </body>
