delivery&landing page - margins, buttons, names

--- a/DeliverPage.html
+++ b/DeliverPage.html
@@ -67,27 +67,25 @@ $(document).ready(function(){
                 </div>
 
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Paczka 1</li>
-                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Paczka 2</li>
-                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Paczka 3</li>
-                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Paczka 4</li>
-                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Paczka 5</li>
+                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package  1</li>
+                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package  2</li>
+                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package  3</li>
+                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package  4</li>
+                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package  5</li>
                 </ul>
 
-
-                <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
                     <div class="form-group">
-                        <button id="button" class="btn btn-primary" type="button"
+                        <button id="button" class="btn btn-primary submit-button small-text" type="button"
                                 onclick="location.href='FulfillmentOfTheOrder_DeliverPage.html'">
                             SUMBIT YOUR OFFER
                         </button>
                     </div>
                     <div class="form-group">
-                        <button id="button" class="btn" type="button" onclick="location.href='LandingPage.html'">
+                        <button id="button" class="btn submit-button small-text" type="button" onclick="location.href='LandingPage.html'">
                             BACK TO MAIN MENU
                         </button>
                     </div>
-                </div>
+
             </form>
         </div>
     </div>
