Update Fulfillment_DeliverPage- paczka -> package

--- a/FulfillmentOfTheOrder_DeliverPage.html
+++ b/FulfillmentOfTheOrder_DeliverPage.html
@@ -60,7 +60,7 @@
                 <form class="form-horizontal">
                     <div class="reset-margin-bottom form-group">
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Paczka 1
+                            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package 1
                             </li>
                         </ul>
                     </div>
