--- a/FulfillmentOfTheOrder_SenderPage.html
+++ b/FulfillmentOfTheOrder_SenderPage.html
@@ -216,7 +216,7 @@
                             </div>
                             <div class="modal-body">
                                 <p>You can go back to sending</p>
-                                <button type="button" onclick="location.href='DeliverPage.html'"
+                                <button type="button" onclick="location.href='SenderPage.html'"
                                         class="btn btn-primary submit-button">Continue ordering
                                 </button>
 
