add ordered package details view

--- a/OrderHistoryDetailsPage.html
+++ b/OrderHistoryDetailsPage.html
@@ -58,11 +58,11 @@
     <div class="row top-buffer">
         <h3 class="text-center offset-down"> Your Order History </h3>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package 1</li>
-            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package 2</li>
-            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package 3</li>
-            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package 4</li>
-            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package 5</li>
+            <li class="list-group-item" onclick="location.href='PackageDetail.html'"><span class="glyphicon glyphicon-inbox box"></span> Package 1</li>
+            <li class="list-group-item" onclick="location.href='PackageDetail2.html'"><span class="glyphicon glyphicon-inbox box"></span> Package 2</li>
+            <li class="list-group-item" onclick="location.href='PackageDetail3.html'"><span class="glyphicon glyphicon-inbox box"></span> Package 3</li>
+            <li class="list-group-item" onclick="location.href='PackageDetail4.html'"><span class="glyphicon glyphicon-inbox box"></span> Package 4</li>
+            <li class="list-group-item" onclick="location.href='PackageDetail5.html'"><span class="glyphicon glyphicon-inbox box"></span> Package 5</li>
         </ul>
     </div>
     </div>
