--- a/PackageDetail2.html
+++ b/PackageDetail2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>DeliverPage</title>
+    <title>RegisterPage</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -21,14 +21,9 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
-        <script type="text/javascript">
-$(document).ready(function(){
-    $("#navbar-frame").load("navbar.html");
-});
-    </script>
 </head>
 <body>
-<div class="container">
+<div class="container column-view">
     <div class="col-md-12 col-sm-12 col-xs-12 offset-down">
         <div class="row search-bar">
             <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12 remove-padding">
@@ -61,33 +56,54 @@ $(document).ready(function(){
             </div>
         </div>
         <div class="row top-buffer">
-            <form class="form-horizontal">
-                <div class="panel panel-default">
-                    <div class="panel-body" id="boxes">PACK READY TO BE DELIVERED IN OUR NEIGHBOURHOOD</div>
-                </div>
+            <h3 class="text-center offset-down"> Package 2 </h3>
+        </div>
 
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package  1</li>
-                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package  2</li>
-                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package  3</li>
-                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package  4</li>
-                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package  5</li>
-                </ul>
 
-                    <div class="form-group">
-                        <button id="button" class="btn btn-primary submit-button small-text" type="button"
-                                onclick="location.href='FulfillmentOfTheOrder_DeliverPage.html'">
-                            SUMBIT YOUR OFFER
-                        </button>
-                    </div>
-                    <div class="form-group">
-                        <button id="button" class="btn submit-button small-text" type="button" onclick="location.href='LandingPage.html'">
-                            Back to main menu
-                        </button>
-                    </div>
+        <div class="form-group order-details-container">
+            <div class="image-container">
+                <a ><img src="http://via.placeholder.com/100x100"></a>
+            </div>
 
-            </form>
+            <div class="description-container">
+
+                <label class="col-sm-2 col-md-2 control-label">Name of product:</label>
+                <span class="col-sm-2 col-md-2">Mountain bike</span>
+
+                <label class="col-sm-2 col-md-2 control-label">Order date:</label>
+                <span class="col-sm-2 col-md-2">22-May-2018 10:00</span>
+
+                <label class="col-sm-2 col-md-2 control-label" >Deliver date:</label>
+                <span class="col-sm-2 col-md-2">27-May-2018 22:08</span>
+
+                <label class="col-sm-2 col-md-2 control-label">Price:</label>
+                <span class="col-sm-2 col-md-2">399,99$</span>
+
+                <label class="col-sm-2 col-md-2 control-label" >Quantity:</label>
+                <span class="col-sm-2 col-md-2">1</span>
+
+                <label class="col-sm-2 col-md-2 control-label">Delivered by:</label>
+                <span class="col-sm-2 col-md-2">Matt Pbsn</span>
+            </div>
+        </div>
+
+        <div class="form-group order-details-container">
+            <button class="btn submit-button " type="button" onclick="location.href='PackageDetail.html'">
+                Previous
+            </button>
+
+            <button class="btn submit-button " type="button" onclick="location.href='PackageDetail3.html'">
+                Next
+            </button>
+        </div>
+
+        <div class="form-group">
+            <button class="btn submit-button btn-primary" type="button" onclick="location.href='OrderHistoryDetailsPage.html'">
+                Back to order history
+            </button>
         </div>
     </div>
+</div>
+</div>
 </body>
 </html>
