--- a/SenderPage.html
+++ b/SenderPage.html
@@ -77,7 +77,7 @@
                     </div>
 
                     <div class="form-group">
-                        <button id="button" class="btn submit-button small-text" type="button" onclick="location.href='LandingPage.html'">BACK TO LANDING PAGE</button>
+                        <button id="button" class="btn submit-button small-text" type="button" onclick="location.href='LandingPage.html'">Back to main menu</button>
                     </div>
                 </form>
             </div>
