Code refactor. Add directories for mockups with deliverers profile etc

--- a/OrderHistoryDetailsPage.html
+++ b/OrderHistoryDetailsPage.html
@@ -29,19 +29,22 @@
             <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12 remove-padding">
                 <div class="input-group">
                     <span class="input-group-btn padding-right">
-                        <button class="btn btn-default white-background remove-padding" type="button" onclick="location.href='LandingPage.html'">
+                        <button class="btn btn-default white-background remove-padding" type="button"
+                                onclick="location.href='LandingPage.html'">
                             <img src="data/small_logo.PNG" class="small-image"></button>
                     </span>
 
                     <input type="text" class="form-control search-bar-height" placeholder="Search for...">
                     <span class="input-group-btn padding-left">
-                        <button class="btn btn-default white-background" type="button" onclick="location.href='NotificationsPage.html'">
+                        <button class="btn btn-default white-background" type="button"
+                                onclick="location.href='NotificationsPage.html'">
                             <span class="glyphicon glyphicon-bell search search-icon large-icon"></span>
                         </button>
                     </span>
 
                     <span class="input-group-btn padding-left">
-                        <button class="btn btn-default white-background dropdown-toggle" type="button" data-toggle="dropdown">
+                        <button class="btn btn-default white-background dropdown-toggle" type="button"
+                                data-toggle="dropdown">
                             <span class="glyphicon glyphicon-menu-hamburger search search-icon large-icon"></span></button>
                         <ul class="dropdown-menu dropdown-menu-right">
                             <li><a href="OrderHistoryDetailsPage.html">Your orders history</a></li>
@@ -55,16 +58,26 @@
                 </div>
             </div>
         </div>
-    <div class="row top-buffer">
-        <h3 class="text-center offset-down"> Your Order History </h3>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item" onclick="location.href='PackageDetail.html'"><span class="glyphicon glyphicon-inbox box"></span> Package 1</li>
-            <li class="list-group-item" onclick="location.href='PackageDetail2.html'"><span class="glyphicon glyphicon-inbox box"></span> Package 2</li>
-            <li class="list-group-item" onclick="location.href='PackageDetail3.html'"><span class="glyphicon glyphicon-inbox box"></span> Package 3</li>
-            <li class="list-group-item" onclick="location.href='PackageDetail4.html'"><span class="glyphicon glyphicon-inbox box"></span> Package 4</li>
-            <li class="list-group-item" onclick="location.href='PackageDetail5.html'"><span class="glyphicon glyphicon-inbox box"></span> Package 5</li>
-        </ul>
-    </div>
+        <div class="row top-buffer">
+            <h3 class="text-center offset-down"> Your Order History </h3>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item" onclick="location.href='OrderPackages/PackageDetail1.html'"><span
+                        class="glyphicon glyphicon-inbox box"></span> Package 1
+                </li>
+                <li class="list-group-item" onclick="location.href='OrderPackages/PackageDetail2.html'"><span
+                        class="glyphicon glyphicon-inbox box"></span> Package 2
+                </li>
+                <li class="list-group-item" onclick="location.href='OrderPackages/PackageDetail3.html'"><span
+                        class="glyphicon glyphicon-inbox box"></span> Package 3
+                </li>
+                <li class="list-group-item" onclick="location.href='OrderPackages/PackageDetail4.html'"><span
+                        class="glyphicon glyphicon-inbox box"></span> Package 4
+                </li>
+                <li class="list-group-item" onclick="location.href='OrderPackages/PackageDetail5.html'"><span
+                        class="glyphicon glyphicon-inbox box"></span> Package 5
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
 </div>
