--- a/DeliveredPackages/DeliverPackageDetail1.html
+++ b/DeliveredPackages/DeliverPackageDetail1.html
@@ -20,7 +20,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
-    <link href="data/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="../data/styles.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 <div class="container column-view">
@@ -29,13 +29,13 @@
             <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12 remove-padding">
                 <div class="input-group">
                     <span class="input-group-btn padding-right">
-                        <button class="btn btn-default white-background remove-padding" type="button" onclick="location.href='LandingPage.html'">
-                            <img src="data/small_logo.PNG" class="small-image"></button>
+                        <button class="btn btn-default white-background remove-padding" type="button" onclick="location.href='../LandingPage.html'">
+                            <img src="../data/small_logo.PNG" class="small-image"></button>
                     </span>
 
                     <input type="text" class="form-control search-bar-height" placeholder="Search for...">
                     <span class="input-group-btn padding-left">
-                        <button class="btn btn-default white-background" type="button" onclick="location.href='NotificationsPage.html'">
+                        <button class="btn btn-default white-background" type="button" onclick="location.href='../NotificationsPage.html'">
                             <span class="glyphicon glyphicon-bell search search-icon large-icon"></span>
                         </button>
                     </span>
@@ -44,19 +44,19 @@
                         <button class="btn btn-default white-background dropdown-toggle" type="button" data-toggle="dropdown">
                             <span class="glyphicon glyphicon-menu-hamburger search search-icon large-icon"></span></button>
                         <ul class="dropdown-menu dropdown-menu-right">
-                            <li><a href="OrderHistoryDetailsPage.html">Your orders history</a></li>
-                            <li><a href="SendHistoryDetailsPage.html">Your sending history</a></li>
+                            <li><a href="../OrderHistoryDetailsPage.html">Your orders history</a></li>
+                            <li><a href="../SendHistoryDetailsPage.html">Your sending history</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="HelpPage.html">Help</a></li>
-                            <li><a href="AccountSettingsPage.html">Account settings</a></li>
-                            <li><a href="LogoutPage.html">Log Out</a></li>
+                            <li><a href="../HelpPage.html">Help</a></li>
+                            <li><a href="../AccountSettingsPage.html">Account settings</a></li>
+                            <li><a href="../LogoutPage.html">Log Out</a></li>
                         </ul>
                     </span>
                 </div>
             </div>
         </div>
         <div class="row top-buffer">
-            <h3 class="text-center offset-down"> Package 2 </h3>
+            <h3 class="text-center offset-down"> Package 1 </h3>
         </div>
 
 
@@ -68,37 +68,37 @@
             <div class="description-container">
 
                 <label class="col-sm-2 col-md-2 control-label">Name of product:</label>
-                <span class="col-sm-2 col-md-2">Mountain bike</span>
+                <span class="col-sm-2 col-md-2">Mountain boots</span>
 
                 <label class="col-sm-2 col-md-2 control-label">Order date:</label>
-                <span class="col-sm-2 col-md-2">22-May-2018 10:00</span>
+                <span class="col-sm-2 col-md-2">21-May-2018 18:08</span>
 
                 <label class="col-sm-2 col-md-2 control-label" >Deliver date:</label>
-                <span class="col-sm-2 col-md-2">27-May-2018 22:08</span>
+                <span class="col-sm-2 col-md-2">23-May-2018 10:08</span>
 
                 <label class="col-sm-2 col-md-2 control-label">Price:</label>
-                <span class="col-sm-2 col-md-2">399,99$</span>
+                <span class="col-sm-2 col-md-2">59,99$</span>
 
                 <label class="col-sm-2 col-md-2 control-label" >Quantity:</label>
                 <span class="col-sm-2 col-md-2">1</span>
 
                 <label class="col-sm-2 col-md-2 control-label">Delivered by:</label>
-                <span class="col-sm-2 col-md-2">Matt Pbsn</span>
+                <span class="col-sm-2 col-md-2">Jon Doe</span>
             </div>
         </div>
 
         <div class="form-group order-details-container">
-            <button class="btn submit-button " type="button" onclick="location.href='PackageDetail.html'">
+            <button class="btn submit-button disable" type="button" disabled>
                 Previous
             </button>
 
-            <button class="btn submit-button " type="button" onclick="location.href='PackageDetail3.html'">
+            <button class="btn submit-button " type="button" onclick="location.href='../OrderPackages/PackageDetail2.html'">
                 Next
             </button>
         </div>
 
         <div class="form-group">
-            <button class="btn submit-button btn-primary" type="button" onclick="location.href='OrderHistoryDetailsPage.html'">
+            <button class="btn submit-button btn-primary" type="button" onclick="location.href='../OrderHistoryDetailsPage.html'">
                 Back to order history
             </button>
         </div>
