--- a/OrderPackages/PackageDetail3.html
+++ b/OrderPackages/PackageDetail3.html
@@ -20,7 +20,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
-    <link href="data/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="../data/styles.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 <div class="container column-view">
@@ -29,13 +29,13 @@
             <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12 remove-padding">
                 <div class="input-group">
                     <span class="input-group-btn padding-right">
-                        <button class="btn btn-default white-background remove-padding" type="button" onclick="location.href='LandingPage.html'">
-                            <img src="data/small_logo.PNG" class="small-image"></button>
+                        <button class="btn btn-default white-background remove-padding" type="button" onclick="location.href='../LandingPage.html'">
+                            <img src="../data/small_logo.PNG" class="small-image"></button>
                     </span>
 
                     <input type="text" class="form-control search-bar-height" placeholder="Search for...">
                     <span class="input-group-btn padding-left">
-                        <button class="btn btn-default white-background" type="button" onclick="location.href='NotificationsPage.html'">
+                        <button class="btn btn-default white-background" type="button" onclick="location.href='../NotificationsPage.html'">
                             <span class="glyphicon glyphicon-bell search search-icon large-icon"></span>
                         </button>
                     </span>
@@ -44,12 +44,12 @@
                         <button class="btn btn-default white-background dropdown-toggle" type="button" data-toggle="dropdown">
                             <span class="glyphicon glyphicon-menu-hamburger search search-icon large-icon"></span></button>
                         <ul class="dropdown-menu dropdown-menu-right">
-                            <li><a href="OrderHistoryDetailsPage.html">Your orders history</a></li>
-                            <li><a href="SendHistoryDetailsPage.html">Your sending history</a></li>
+                            <li><a href="../OrderHistoryDetailsPage.html">Your orders history</a></li>
+                            <li><a href="../SendHistoryDetailsPage.html">Your sending history</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="HelpPage.html">Help</a></li>
-                            <li><a href="AccountSettingsPage.html">Account settings</a></li>
-                            <li><a href="LogoutPage.html">Log Out</a></li>
+                            <li><a href="../HelpPage.html">Help</a></li>
+                            <li><a href="../AccountSettingsPage.html">Account settings</a></li>
+                            <li><a href="../LogoutPage.html">Log Out</a></li>
                         </ul>
                     </span>
                 </div>
@@ -98,7 +98,7 @@
         </div>
 
         <div class="form-group">
-            <button class="btn submit-button btn-primary" type="button" onclick="location.href='OrderHistoryDetailsPage.html'">
+            <button class="btn submit-button btn-primary" type="button" onclick="location.href='../OrderHistoryDetailsPage.html'">
                 Back to order history
             </button>
         </div>
