--- a/SenderPage.html
+++ b/SenderPage.html
@@ -63,11 +63,11 @@
                 </div>
 
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><span class="glyphicon glyphicon-user deli"></span> Deliverer 1</li>
-                    <li class="list-group-item"><span class="glyphicon glyphicon-user deli"></span> Deliverer 2</li>
-                    <li class="list-group-item"><span class="glyphicon glyphicon-user deli"></span> Deliverer 3</li>
-                    <li class="list-group-item"><span class="glyphicon glyphicon-user deli"></span> Deliverer 4</li>
-                    <li class="list-group-item"><span class="glyphicon glyphicon-user deli"></span> Deliverer 5</li>
+                    <li class="list-group-item" onclick="location.href='DeliverersProfiles/DelivererProfileDetails1.html'"><span class="glyphicon glyphicon-user deli"></span> Deliverer 1</li>
+                    <li class="list-group-item" onclick="location.href='DeliverersProfiles/DelivererProfileDetails2.html'"><span class="glyphicon glyphicon-user deli"></span> Deliverer 2</li>
+                    <li class="list-group-item" onclick="location.href='DeliverersProfiles/DelivererProfileDetails3.html'"><span class="glyphicon glyphicon-user deli"></span> Deliverer 3</li>
+                    <li class="list-group-item" onclick="location.href='DeliverersProfiles/DelivererProfileDetails4.html'"><span class="glyphicon glyphicon-user deli"></span> Deliverer 4</li>
+                    <li class="list-group-item" onclick="location.href='DeliverersProfiles/DelivererProfileDetails5.html'"><span class="glyphicon glyphicon-user deli"></span> Deliverer 5</li>
                 </ul>
                     <div class="form-group">
                         <button id="button" class="btn btn-primary submit-button small-text" type="button"
