--- a/DeliverPage.html
+++ b/DeliverPage.html
@@ -67,11 +67,11 @@ $(document).ready(function(){
                 </div>
 
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package  1</li>
-                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package  2</li>
-                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package  3</li>
-                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package  4</li>
-                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Package  5</li>
+                    <li class="list-group-item" onclick="location.href='PackagesReadyToBeDelivered/ReadyPackageDetails1.html'"><span class="glyphicon glyphicon-inbox box"></span> Package  1</li>
+                    <li class="list-group-item" onclick="location.href='PackagesReadyToBeDelivered/ReadyPackageDetails2.html'"><span class="glyphicon glyphicon-inbox box"></span> Package  2</li>
+                    <li class="list-group-item" onclick="location.href='PackagesReadyToBeDelivered/ReadyPackageDetails3.html'"><span class="glyphicon glyphicon-inbox box"></span> Package  3</li>
+                    <li class="list-group-item" onclick="location.href='PackagesReadyToBeDelivered/ReadyPackageDetails4.html'"><span class="glyphicon glyphicon-inbox box"></span> Package  4</li>
+                    <li class="list-group-item" onclick="location.href='PackagesReadyToBeDelivered/ReadyPackageDetails5.html'"><span class="glyphicon glyphicon-inbox box"></span> Package  5</li>
                 </ul>
 
                     <div class="form-group">
