--- a/DeliverersProfiles/DelivererProfileDetails1.html
+++ b/DeliverersProfiles/DelivererProfileDetails1.html
@@ -7,6 +7,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+    <!-- Font Awesome Icon Library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -59,7 +62,7 @@
             </div>
         </div>
         <div class="row top-buffer">
-            <h3 class="text-center offset-down"> Package 1 </h3>
+            <h3 class="text-center offset-down"> Deliverer Joe Doe </h3>
         </div>
 
 
@@ -70,32 +73,38 @@
 
             <div class="description-container">
 
-                <label class="col-sm-2 col-md-2 control-label">Name of product:</label>
-                <span class="col-sm-2 col-md-2">Mountain boots</span>
+                <label class="col-sm-2 col-md-2 control-label">Full name:</label>
+                <span class="col-sm-2 col-md-2">Joe Doe</span>
 
-                <label class="col-sm-2 col-md-2 control-label">Order date:</label>
-                <span class="col-sm-2 col-md-2">21-May-2018 18:08</span>
+                <label class="col-sm-2 col-md-2 control-label">Localization:</label>
+                <span class="col-sm-2 col-md-2">Krakow</span>
 
-                <label class="col-sm-2 col-md-2 control-label">Deliver date:</label>
-                <span class="col-sm-2 col-md-2">23-May-2018 10:08</span>
+                <label class="col-sm-2 col-md-2 control-label">Ratings</label>
+                <span class="col-sm-2 col-md-2">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </span>
 
-                <label class="col-sm-2 col-md-2 control-label">Price:</label>
-                <span class="col-sm-2 col-md-2">59,99$</span>
+                <label class="col-sm-2 col-md-2 control-label">Number of delivered packages:</label>
+                <span class="col-sm-2 col-md-2">18</span>
 
-                <label class="col-sm-2 col-md-2 control-label">Quantity:</label>
-                <span class="col-sm-2 col-md-2">1</span>
+                <label class="col-sm-2 col-md-2 control-label">Vehicle:</label>
+                <span class="col-sm-2 col-md-2">Mercedes Sprinter 2.4Cdi</span>
 
             </div>
         </div>
 
         <div class="form-group order-details-container">
             <button class="btn submit-button disable" type="button" disabled>
-                Previous
+                Previous profile
             </button>
 
             <button class="btn submit-button " type="button"
-                    onclick="location.href='../OrderPackages/PackageDetail2.html'">
-                Next
+                    onclick="location.href='../DeliverersProfiles/DelivererProfileDetails2.html'">
+                Next profile
             </button>
         </div>
 
