--- a/DeliverersProfiles/DelivererProfileDetails5.html
+++ b/DeliverersProfiles/DelivererProfileDetails5.html
@@ -7,6 +7,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+    <!-- Font Awesome Icon Library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -59,7 +62,7 @@
             </div>
         </div>
         <div class="row top-buffer">
-            <h3 class="text-center offset-down"> Package 1 </h3>
+            <h3 class="text-center offset-down"> Deliverer Matt Barnes</h3>
         </div>
 
 
@@ -70,39 +73,44 @@
 
             <div class="description-container">
 
-                <label class="col-sm-2 col-md-2 control-label">Name of product:</label>
-                <span class="col-sm-2 col-md-2">Mountain boots</span>
+                <label class="col-sm-2 col-md-2 control-label">Full name:</label>
+                <span class="col-sm-2 col-md-2">Matt Barnes</span>
 
-                <label class="col-sm-2 col-md-2 control-label">Order date:</label>
-                <span class="col-sm-2 col-md-2">21-May-2018 18:08</span>
+                <label class="col-sm-2 col-md-2 control-label">Localization:</label>
+                <span class="col-sm-2 col-md-2">Wieliczka</span>
 
-                <label class="col-sm-2 col-md-2 control-label">Deliver date:</label>
-                <span class="col-sm-2 col-md-2">23-May-2018 10:08</span>
+                <label class="col-sm-2 col-md-2 control-label">Ratings</label>
+                <span class="col-sm-2 col-md-2">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                </span>
 
-                <label class="col-sm-2 col-md-2 control-label">Price:</label>
-                <span class="col-sm-2 col-md-2">59,99$</span>
+                <label class="col-sm-2 col-md-2 control-label">Number of delivered packages:</label>
+                <span class="col-sm-2 col-md-2">48</span>
 
-                <label class="col-sm-2 col-md-2 control-label">Quantity:</label>
-                <span class="col-sm-2 col-md-2">1</span>
+                <label class="col-sm-2 col-md-2 control-label">Vehicle:</label>
+                <span class="col-sm-2 col-md-2">Dacia Logan</span>
 
             </div>
         </div>
 
         <div class="form-group order-details-container">
-            <button class="btn submit-button disable" type="button" disabled>
-                Previous
+            <button class="btn submit-button disable" type="button" onclick="location.href='../DeliverersProfiles/DelivererProfileDetails4.html'">
+                Previous profile
             </button>
 
-            <button class="btn submit-button " type="button"
-                    onclick="location.href='../OrderPackages/PackageDetail2.html'">
-                Next
+            <button class="btn submit-button " type="button" disabled>
+                Next profile
             </button>
         </div>
 
         <div class="form-group">
             <button class="btn submit-button btn-primary" type="button"
-                    onclick="location.href='../OrderHistoryDetailsPage.html'">
-                Back to order history
+                    onclick="location.href='../SenderPage.html'">
+                Back to sender page
             </button>
         </div>
     </div>
