fix delivery history. add rating

--- a/DeliveredPackages/DeliverPackageDetail5.html
+++ b/DeliveredPackages/DeliverPackageDetail5.html
@@ -7,10 +7,6 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <!-- Font Awesome Icon Library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -33,19 +29,22 @@
             <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12 remove-padding">
                 <div class="input-group">
                     <span class="input-group-btn padding-right">
-                        <button class="btn btn-default white-background remove-padding" type="button" onclick="location.href='../LandingPage.html'">
+                        <button class="btn btn-default white-background remove-padding" type="button"
+                                onclick="location.href='../LandingPage.html'">
                             <img src="../data/small_logo.PNG" class="small-image"></button>
                     </span>
 
                     <input type="text" class="form-control search-bar-height" placeholder="Search for...">
                     <span class="input-group-btn padding-left">
-                        <button class="btn btn-default white-background" type="button" onclick="location.href='../NotificationsPage.html'">
+                        <button class="btn btn-default white-background" type="button"
+                                onclick="location.href='../NotificationsPage.html'">
                             <span class="glyphicon glyphicon-bell search search-icon large-icon"></span>
                         </button>
                     </span>
 
                     <span class="input-group-btn padding-left">
-                        <button class="btn btn-default white-background dropdown-toggle" type="button" data-toggle="dropdown">
+                        <button class="btn btn-default white-background dropdown-toggle" type="button"
+                                data-toggle="dropdown">
                             <span class="glyphicon glyphicon-menu-hamburger search search-icon large-icon"></span></button>
                         <ul class="dropdown-menu dropdown-menu-right">
                             <li><a href="../OrderHistoryDetailsPage.html">Your orders history</a></li>
@@ -60,58 +59,52 @@
             </div>
         </div>
         <div class="row top-buffer">
-            <h3 class="text-center offset-down"> Package 4 </h3>
+            <h3 class="text-center offset-down"> Package 5 </h3>
         </div>
 
 
         <div class="form-group order-details-container">
             <div class="image-container">
-                <a ><img src="http://via.placeholder.com/100x100"></a>
+                <a><img src="http://via.placeholder.com/100x100"></a>
             </div>
 
             <div class="description-container">
 
                 <label class="col-sm-2 col-md-2 control-label">Name of product:</label>
-                <span class="col-sm-2 col-md-2">Rucksack</span>
+                <span class="col-sm-2 col-md-2">Mountain helmet</span>
 
                 <label class="col-sm-2 col-md-2 control-label">Order date:</label>
-                <span class="col-sm-2 col-md-2">10-June-2018 10:00</span>
+                <span class="col-sm-2 col-md-2">21-May-2018 18:08</span>
 
-                <label class="col-sm-2 col-md-2 control-label" >Deliver date:</label>
-                <span class="col-sm-2 col-md-2">17-May-2018 22:08</span>
+                <label class="col-sm-2 col-md-2 control-label">Deliver date:</label>
+                <span class="col-sm-2 col-md-2">23-May-2018 10:08</span>
 
                 <label class="col-sm-2 col-md-2 control-label">Price:</label>
-                <span class="col-sm-2 col-md-2">89,99$</span>
+                <span class="col-sm-2 col-md-2">111,99$</span>
 
-                <label class="col-sm-2 col-md-2 control-label" >Quantity:</label>
-                <span class="col-sm-2 col-md-2">1</span>
+                <label class="col-sm-2 col-md-2 control-label">Quantity:</label>
+                <span class="col-sm-2 col-md-2">2</span>
 
-                <label class="col-sm-2 col-md-2 control-label">Delivered by:</label>
-                <span class="col-sm-2 col-md-2">Matt Pbsn</span>
+                <label class="col-sm-2 col-md-2 control-label">Delivered to:</label>
+                <span class="col-sm-2 col-md-2">Max Foo</span>
 
-                <label class="col-sm-2 col-md-2 control-label">Given mark</label>
-                <span class="col-sm-2 col-md-2">
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star "></span>
-                    <span class="fa fa-star "></span>
-                    <span class="fa fa-star "></span>
-                    <span class="fa fa-star "></span>
-                </span>
             </div>
         </div>
 
         <div class="form-group order-details-container">
-            <button class="btn submit-button " type="button" onclick="location.href='PackageDetail3.html'">
+            <button class="btn submit-button disable" type="button" onclick="location.href='../DeliveredPackages/DeliverPackageDetail4.html'">
                 Previous
             </button>
 
-            <button class="btn submit-button " type="button" onclick="location.href='PackageDetail5.html'">
+            <button class="btn submit-button " type="button"
+                    disabled>
                 Next
             </button>
         </div>
 
         <div class="form-group">
-            <button class="btn submit-button btn-primary" type="button" onclick="location.href='../OrderHistoryDetailsPage.html'">
+            <button class="btn submit-button btn-primary" type="button"
+                    onclick="location.href='../SendHistoryDetailsPage.html'">
                 Back to order history
             </button>
         </div>
