--- a/DeliveredPackages/DeliverPackageDetail1.html
+++ b/DeliveredPackages/DeliverPackageDetail1.html
@@ -85,6 +85,9 @@
                 <label class="col-sm-2 col-md-2 control-label">Quantity:</label>
                 <span class="col-sm-2 col-md-2">1</span>
 
+                <label class="col-sm-2 col-md-2 control-label">Delivered to:</label>
+                <span class="col-sm-2 col-md-2">Joe Ingles</span>
+
             </div>
         </div>
 
@@ -94,14 +97,14 @@
             </button>
 
             <button class="btn submit-button " type="button"
-                    onclick="location.href='../OrderPackages/PackageDetail2.html'">
+                    onclick="location.href='../DeliveredPackages/DeliverPackageDetail2.html'">
                 Next
             </button>
         </div>
 
         <div class="form-group">
             <button class="btn submit-button btn-primary" type="button"
-                    onclick="location.href='../OrderHistoryDetailsPage.html'">
+                    onclick="location.href='../SendHistoryDetailsPage.html'">
                 Back to order history
             </button>
         </div>
