--- a/OrderPackages/PackageDetail1.html
+++ b/OrderPackages/PackageDetail1.html
@@ -7,6 +7,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+    <!-- Font Awesome Icon Library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -87,6 +91,15 @@
 
                 <label class="col-sm-2 col-md-2 control-label">Delivered by:</label>
                 <span class="col-sm-2 col-md-2">Jon Doe</span>
+
+                <label class="col-sm-2 col-md-2 control-label">Given mark</label>
+                <span class="col-sm-2 col-md-2">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                </span>
             </div>
         </div>
 
