--- a/FulfillmentOfTheOrder_SenderPage.html
+++ b/FulfillmentOfTheOrder_SenderPage.html
@@ -20,6 +20,13 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
+    <script>function toPowerOfThree(x){
+        var result = x*x*x;
+        console.log(result)
+        return result;
+    }
+
+    </script>
 
 </head>
 <body>
