Added multiple fixes

--- a/DeliverersProfiles/DelivererProfileDetails5.html
+++ b/DeliverersProfiles/DelivererProfileDetails5.html
@@ -106,11 +106,16 @@
                 Next profile
             </button>
         </div>
-
+        <div class="form-group">
+            <button class="btn submit-button btn-primary" type="button"
+                    onclick="location.href='../FulfillmentOfTheOrder_SenderPage.html'">
+                Select this deliverer
+            </button>
+        </div>
         <div class="form-group">
             <button class="btn submit-button btn-primary" type="button"
                     onclick="location.href='../SenderPage.html'">
-                Back to sender page
+                Back
             </button>
         </div>
     </div>
