--- a/OrderPackages/PackageDetail2.html
+++ b/OrderPackages/PackageDetail2.html
@@ -114,8 +114,8 @@
         </div>
 
         <div class="form-group">
-            <button class="btn submit-button btn-primary" type="button" onclick="location.href='OrderHistoryDetailsPage.html'">
-                Back to order history
+            <button class="btn submit-button btn-primary" type="button" onclick="location.href='../OrderHistoryDetailsPage.html'">
+                Back to history
             </button>
         </div>
     </div>
