--- a/OrderPackages/PackageDetail3.html
+++ b/OrderPackages/PackageDetail3.html
@@ -112,7 +112,7 @@
 
         <div class="form-group">
             <button class="btn submit-button btn-primary" type="button" onclick="location.href='../OrderHistoryDetailsPage.html'">
-                Back to order history
+                Back to history
             </button>
         </div>
     </div>
