--- a/PackagesReadyToBeDelivered/ReadyPackageDetails1.html
+++ b/PackagesReadyToBeDelivered/ReadyPackageDetails1.html
@@ -116,7 +116,7 @@
             <button class="btn submit-button btn-primary" type="button"
                     onclick="location.href='../SenderPage.html.html'">
                 <!--TODO redirect to proper view-->
-                Back to sender menu
+                Back
             </button>
         </div>
     </div>
