--- a/DeliveredPackages/DeliverPackageDetail1.html
+++ b/DeliveredPackages/DeliverPackageDetail1.html
@@ -105,7 +105,7 @@
         <div class="form-group">
             <button class="btn submit-button btn-primary" type="button"
                     onclick="location.href='../SendHistoryDetailsPage.html'">
-                Back to order history
+                Back to history
             </button>
         </div>
     </div>
