--- a/DeliverersProfiles/DelivererProfileDetails1.html
+++ b/DeliverersProfiles/DelivererProfileDetails1.html
@@ -107,11 +107,16 @@
                 Next profile
             </button>
         </div>
-
         <div class="form-group">
             <button class="btn submit-button btn-primary" type="button"
-                    onclick="location.href='../OrderHistoryDetailsPage.html'">
-                Back to order history
+                    onclick="location.href='../FulfillmentOfTheOrder_SenderPage.html'">
+                Select this deliverer
+            </button>
+        </div>
+        <div class="form-group">
+            <button class="btn submit-button btn-primary" type="button"
+                    onclick="location.href='../SenderPage.html'">
+                Back
             </button>
         </div>
     </div>
