--- a/Notifications/NotificationDetail3.html
+++ b/Notifications/NotificationDetail3.html
@@ -85,7 +85,7 @@
         <div class="form-group">
             <button class="btn submit-button btn-primary" type="button"
                     onclick="location.href='../NotificationsPage.html'">
-                Back to notifications
+                Back to list
             </button>
         </div>
     </div>
