--- a/Notifications/NotificationDetail4.html
+++ b/Notifications/NotificationDetail4.html
@@ -77,7 +77,7 @@
                 Previous notification
             </button>
 
-            <button class="btn submit-button " type="button" onclick="location.href='../Notifications/NotificationDetail4.html'">
+            <button class="btn submit-button " type="button" onclick="location.href='../Notifications/NotificationDetail5.html'">
                 Next notification
             </button>
         </div>
@@ -85,7 +85,7 @@
         <div class="form-group">
             <button class="btn submit-button btn-primary" type="button"
                     onclick="location.href='../NotificationsPage.html'">
-                Back to notifications
+                Back to list
             </button>
         </div>
     </div>
