--- a/SendHistoryDetailsPage.html
+++ b/SendHistoryDetailsPage.html
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="row top-buffer">
-            <h3 class="text-center offset-down"> Your Delivery History </h3>
+            <h3 class="text-center offset-down"> Your Sending History </h3>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item" onclick="location.href='DeliveredPackages/DeliverPackageDetail1.html'"><span
                         class="glyphicon glyphicon-inbox box"></span> Package 1
